cleaning and fixing stuff
